--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Welcome to GroceryCut</h1>
-        <p>The easiest way to [describe your app's purpose].</p>
+        <p>The easiest way to to help users create personalized grocery lists based on their budget and food preferences. The user can input a budget (e.g., $50) and a prompt (e.g., "Chinese and Italian"), and the app generates a grocery list tailored to the user’s budget. .</p>
     </header>
     <main>
         <section>
@@ -18,17 +18,23 @@
         </section>
         <section>
             <h2>Why Use Our App?</h2>
-            <p>[Add a compelling explanation of your app's features and benefits.]</p>
+            <p>GroceryCut is your smart shopping assistant. Built with React and powered by the ChatGPT API, our web app helps users create personalized grocery lists based on their budget and food preferences. Whether you're planning a $50 grocery run or craving a mix of Chinese and Italian cuisine, GroceryCut generates a custom list tailored to your needs. It takes the guesswork out of shopping, helping you stay within budget while exploring the foods you love. Simple, efficient, and intuitive—GroceryCut makes every grocery trip smarter.</p>
         </section>
         <section>
-            <h2>App Screenshots</h2>
-            <img src="screenshot1.png" alt="Screenshot 1">
-            <img src="screenshot2.png" alt="Screenshot 2">
-            <img src="screenshot3.png" alt="Screenshot 3">
+            <h2>Web App Screenshots</h2>
+            <img src="/images/grocerycut.png" alt="Screenshot 1">
+            <img src="/images/grocerycut2.png" alt="Screenshot 2">
+            <img src="/images/grocerycut3.png" alt="Screenshot 3">
         </section>
         <section>
             <h2>About Us</h2>
-            <p>Created by Rick Jiang. Connect with us on <a href="https://linkedin.com/in/yourprofile">LinkedIn</a>.</p>
+            <p>Created by GroceryCut. Connect with us on 
+                <a href="https://www.linkedin.com/in/rick-jiang-/">Rick's LinkedIn</a>.
+                <a href="https://www.linkedin.com/in/jericoelliarambulo/">Jerico's LinkedIn</a>.
+                <a href="https://www.linkedin.com/in/marcuscampbell03/">Marcus's LinkedIn</a>.
+                <a href="https://www.linkedin.com/in/aidanhall002/">Aidan's LinkedIn</a>.
+                
+            </p>
         </section>
     </main>
     <footer>
